PROJECT(EpilepsyViewer)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

STRING(TOUPPER ${PROJECT_NAME} PROJECT_NAME_UPPER)
STRING(TOLOWER ${PROJECT_NAME} PROJECT_NAME_LOWER)

FIND_PACKAGE(AIRS REQUIRED)
INCLUDE(${AIRS_USE_FILE})

#FIND_PACKAGE(VTK REQUIRED)
#INCLUDE(${VTK_USE_FILE})

IF(VTK_USE_CARBON)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -arch i386")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -arch i386")
ENDIF(VTK_USE_CARBON)

ADD_SUBDIRECTORY(ToolCursor)
INCLUDE_DIRECTORIES(ToolCursor)

# Need to include class headers and the configuration header.
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR})

IF(APPLE)
  SET(APPLE_APP_NAME "EpilepsyViewer")
  SET(EXECUTABLE_OUTPUT_PATH
   "${PROJECT_BINARY_DIR}/${APPLE_APP_NAME}.app/Contents/MacOS/")
  CONFIGURE_FILE(Info.plist.in
   "${PROJECT_BINARY_DIR}/${APPLE_APP_NAME}.app/Contents/Info.plist")
ENDIF(APPLE)

ADD_EXECUTABLE(EpilepsyViewer
  EpilepsyViewer.cxx
  EpilepsyViewerData.cxx
  EpilepsyViewerDisplay.cxx
)
TARGET_LINK_LIBRARIES(EpilepsyViewer
  vtkToolCursor
  vtkImageRegistration
  vtkImageSegmentation
)

